@@ -7,6 +7,10 @@ What's New in astroid 4.0.0?
 ============================
 Release date: TBA
 
+* Fix crashes with large positive and negative list multipliers.
+
+  Closes #2521
+  Closes #2523
 
 
 What's New in astroid 3.3.5?
